# vida

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.daemon  Dockerfile.web  LICENSE  README.ja.md  README.md  SECURITY.md  docker-compose.yml  electron-builder.yml  getting-started.ja.md  getting-started.md  life.toml  pyproject.toml  start.sh
.claude/skills/: vida-analyze.md  vida-connect.md  vida-data.md  vida-summarize.md
.github/workflows/: release.yml
daemon/: __init__.py  activity.py  analyzer.py  cli.py  config.py  daemon.py  devices.py  knowledge.py  live.py  notify.py  provider_check.py  rag.py  rag_server.py  report.py  retention.py  ws_server.py
daemon/analysis/: motion.py  pose.py  presence.py  transcribe.py
daemon/capture/: audio.py  camera.py  screen.py  window.py
daemon/chat/: discord.py
daemon/claude/: review.py
daemon/llm/: __init__.py  base.py  claude.py  codex.py  gemini.py
daemon/storage/: database.py
daemon/summary/: timeline.py
demo/: package-lock.json  package.json
demo/src/lib/: runtime-demo.ts
life/: __main__.py  activity.py  analyzer.py  cli.py  config.py  daemon.py  live.py  notify.py  report.py
life/analysis/: presence.py  transcribe.py
life/capture/: audio.py  screen.py
life/claude/: analyzer.py
life/storage/: database.py  models.py
life_ai/: __init__.py  __main__.py  config.py
life_ai/analysis/: motion.py  scene.py  transcribe.py
life_ai/capture/: audio.py  camera.py  frame_store.py  screen.py
life_ai/claude/: analyzer.py  review.py
life_ai/summary/: formatter.py  timeline.py
src/life_ai/: cli.py  daemon.py
src/life_ai/claude/: analyzer.py
src/life_ai/storage/: database.py  models.py
tests/: test_codex_provider.py  test_config.py
tests/e2e/: conftest.py  test_live_server_e2e.py  test_rag_server_e2e.py  test_ws_server_e2e.py
web/: package-lock.json  package.json  playwright.config.ts  vite.config.ts
web/e2e/: dashboard.spec.ts  date-nav.spec.ts  fixtures.ts  heatmap.spec.ts  helpers.ts  realtime-lifecycle.spec.ts  search-rag-chat.spec.ts  settings-memo-summary.spec.ts  smoke.spec.ts  timeline-detail.spec.ts
web/electron/: main.ts  preload.ts
web/server/: db.ts  index.ts
web/server/routes/: activities.ts  chat.ts  events.ts  export.ts  frames.ts  live.ts  memos.ts  rag.ts  search.ts  settings.ts  stats.ts  summaries.ts
web/src/: App.tsx  global.css  i18n.ts  index.html  main.tsx
web/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/icons/: icon.icns
web/src-tauri/src/: db.rs  lib.rs  main.rs  models.rs  process.rs  python.rs
web/src-tauri/src/commands/: activities.rs  chat.rs  context.rs  data.rs  devices.rs  events.rs  export.rs  frames.rs  live.rs  memos.rs  mod.rs  provider_check.rs  rag.rs  reports.rs  search.rs  sessions.rs  settings.rs  stats.rs  status.rs  summaries.rs  validate.rs
web/src/__tests__/: demo-mode.test.tsx  runtime.test.ts
web/src/components/: ActivityHeatmap.tsx  AudioPlayer.tsx  Header.tsx  (+13 more)
(+15 files in other folders)
