[project]
name = "vida"
version = "0.2.4"
description = "vida — Personal AI life observer and analyzer"
authors = [
    { name = "andy", email = "takuyarossi77@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "opencv-python-headless>=4.9",
    "click>=8.1",
    "rich>=13.0",
    "google-genai>=1",
    "mediapipe>=0.10",
    "sounddevice>=0.4",
    "sqlite-vec>=0.1.6",
    "python-dotenv>=1.0",
    "setproctitle>=1.3",
    "websockets>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "pytest-asyncio>=0.23",
    "pip-audit>=2",
    "ruff>=0.8",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=6",
    "pytest-asyncio>=0.23",
    "pip-audit>=2",
    "ruff>=0.8",
]

[project.scripts]
life = "daemon.cli:cli"
vida = "daemon.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["daemon"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "e2e: network-level integration tests that boot the real daemon servers on loopback ports",
]
asyncio_mode = "auto"
